--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
 </head>
 <body>
     <div class="site">
-        
+        <div class="header">
+            <div class="navbar">
+                <img src="./logoo.png">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+
+
+
+
+                
+            </div>
+
+        </div>
+
     </div>
 </body>
 </html>
