--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="site">
         <div class="header">
             <div class="navbar">
-                <img src="./logoo.png">
+                <img src="./Untitled_logo_1_free-file.jpg">
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
