--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="site">
         <div class="header">
+
             <div class="navbar">
-                <img src="./Untitled_logo_1_free-file.jpg">
+                <img src="./logoo (1).png">
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
