--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
+
+
 <body>
     <div class="site">
         <div class="header">
-
             <div class="navbar">
                 <img src="./logoo (1).png">
                 <ul>
@@ -19,14 +22,39 @@
                     <li><a href="">Contact</a></li>
                 </ul>
 
-
-
-
-                
             </div>
-
+            <div class="header__content">
+                <h1>The first wealth - health!</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nesciunt eum sequi fugiat magnam porro
+                    atque sit aliquid,</p>
+                <button>Learn More</button>
+            </div>
+            <div class="header__footer">
+                <div class="box">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <div class="mini__box">
+                        <h3>Hospital Adress</h3>
+                        <p>5 Andijan street,Andijan</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-phone"></i>
+                    <div class="mini__box">
+                        <h3>Land No</h3>
+                        <p>+998-90-777-77-77</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-envelope"></i>
+                    <div class="mini__box">
+                        <h3>Email Adress</h3>
+                        <p>example@email.com</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
 </body>
+
 </html>
