--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <body>
     <div class="site">
-        <div class="header">
-            <div class="navbar">
-                <img src="./logoo (1).png">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
+        <div class="navbar">
+            <img src="./logoo (1).png">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
 
-            </div>
+        </div>
+        <div class="header">
             <div class="header__content">
                 <h1>The first wealth - health!</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nesciunt eum sequi fugiat magnam porro
@@ -51,6 +51,33 @@
                         <p>example@email.com</p>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="banner">
+            <h1>About Our Healthcare</h1>
+            <div class="banner__content">
+                <div class="banner__content__main">
+                    <h2>Why Trust US?</h2>
+                    <h3>Provides deserve solution</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, iste eius ratione ipsum
+                        eligendi odit accusantium ipsa repudiandae modi iusto itaque magni porro exercitationem
+                        doloribus illum nesciunt labore! Laborum, commodi facilis. Cumque at hic beatae nam non fuga
+                        libero neque eius ipsam consequatur, error itaque enim eligendi ullam sapiente unde, nemo magnam
+                        atque dolorum molestiae? Ipsum saepe odit eum, architecto consequatur fugiat autem praesentium
+                        molestias, tenetur quos incidunt nemo. Quidem?</p>
+                    <div class="p">
+                        <p> <span>></span> Lorem ipsum, dolor sit amet consectetur ab.</p>
+                        <p> <span>></span> Lorem ipsum, dolor sit amet consectetur ab.</p>
+                        <p> <span>></span> Lorem ipsum, dolor sit amet consectetur ab.</p>
+                        <p> <span>></span> Lorem ipsum, dolor sit amet consectetur ab.</p>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit adipisci praesentium commodi
+                        nostrum libero quis optio ipsum hic saepe earum fuga eos nihil quia voluptatem error quibusdam
+                        consequuntur, expedita iste similique! Consequatur debitis quam consequuntur eum pariatur id
+                        quibusdam at dolor quod totam mollitia dolores non vitae, qui autem aliquid.</p>
+                    <button>Learn More</button>
+                </div>
+                <img src="./doctor.png">
             </div>
         </div>
 
