--- a/index.html
+++ b/index.html
@@ -80,7 +80,44 @@
                 <img src="./doctor.png">
             </div>
         </div>
-
+        <div class="across">
+            <div class="across__box">
+                <div class="across__mini">
+                    <img src="./room.png">
+                    <span>105</span>
+                </div>
+                <div class="across__box__mini">
+                    <h5>Hospital Rooms</h5>
+                </div>
+            </div>
+            <div class="across__box">
+                <div class="across__mini">
+                    <img src="./person.png">
+                    <span>315</span>
+                </div>
+                <div class="across__box__mini">
+                    <h5>Qualified Staff</h5>
+                </div>
+            </div>
+            <div class="across__box">
+                <div class="across__mini">
+                    <img src="./patient.png">
+                    <span></span>
+                </div>
+                <div class="across__box__mini">
+                    <h5>Satisfied Patient</h5>
+                </div>
+            </div>
+            <div class="across__box">
+                <div class="across__mini">
+                    <img src="./medal.png">
+                    <span>245</span>
+                </div>
+                <div class="across__box__mini">
+                    <h5>Doctor Medals</h5>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
